[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/levels/Manhattan/Manhattan.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/games/Gameplay3/ground_grid.material" type="Material" id=2]
[ext_resource path="res://scenes/games/Gameplay3/building_grid.material" type="Material" id=3]
[ext_resource path="res://scenes/games/Gameplay3/Gameplay3.gd" type="Script" id=4]
[ext_resource path="res://scenes/objects/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/objects/StrobeLight/StrobeLight.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/games/Gameplay3/wtc_grid.material" type="Material" id=7]
[ext_resource path="res://assets/2d/icons/Arrow_Down_Key_Light.png" type="Texture" id=8]
[ext_resource path="res://assets/2d/icons/Arrow_Up_Key_Light.png" type="Texture" id=9]
[ext_resource path="res://assets/2d/icons/Arrow_Left_Key_Light.png" type="Texture" id=10]
[ext_resource path="res://assets/2d/icons/Arrow_Right_Key_Light.png" type="Texture" id=11]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 6000, 6000 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 36.7927, 1, 39.8525 )

[sub_resource type="Environment" id=3]
background_mode = 1
ambient_light_energy = 0.0
glow_enabled = true
glow_intensity = 5.86
glow_strength = 0.7
glow_bloom = 0.81
glow_blend_mode = 0

[sub_resource type="CylinderShape" id=4]
radius = 495.611
height = 1053.9

[node name="Gameplay3" type="Spatial"]
script = ExtResource( 4 )

[node name="Manhattan" parent="." instance=ExtResource( 1 )]

[node name="Ground" parent="Manhattan/FarManhattan" index="0"]
material_override = ExtResource( 2 )

[node name="Buildings" parent="Manhattan/FarManhattan" index="1"]
material_override = ExtResource( 3 )

[node name="WTCB" parent="Manhattan/WTC/WTCB" index="1"]
material_override = ExtResource( 7 )

[node name="WTCA" parent="Manhattan/WTC/WTCA" index="2"]
material_override = ExtResource( 7 )

[node name="GridMap" parent="Manhattan" index="2"]
visible = false
data = {
"cells": PoolIntArray( 0, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 4, 3, 0, 5, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 65535, 0, 5, 65535, 0, 6, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}

[node name="Water" type="MeshInstance" parent="Manhattan"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -10.6879, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="LandZone" type="StaticBody" parent="." groups=[
"landing_zone",
]]
transform = Transform( 0.897143, 0, -0.441741, 0, 1, 0, 0.441741, 0, 0.897143, -1348.77, 535.544, 281.427 )

[node name="CollisionShape" type="CollisionShape" parent="LandZone"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -46.4927, -0.789063, -54.1509 )
shape = SubResource( 5 )

[node name="CollisionShape2" type="CollisionShape" parent="LandZone"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 50.3739, -0.817627, 51.955 )
shape = SubResource( 5 )

[node name="StrobeLight" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1322.4, 535.301, 350.226 )

[node name="Player" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.808771, 0, 0.588124, 0, 1, 0, -0.588124, 0, 0.808771, 443.677, 143.571, 1604.12 )
control_mode = "Gameplay3"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1382.78, 0, 283.852 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 507.054, 0 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Goals" type="MarginContainer" parent="CanvasLayer/UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 263.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Goals"]
margin_right = 398.0
margin_bottom = 100.0

[node name="Title" type="Label" parent="CanvasLayer/UI/Goals/VBoxContainer"]
margin_right = 398.0
margin_bottom = 14.0
text = "OBJECTIFS :"

[node name="Objectifs" type="Label" parent="CanvasLayer/UI/Goals/VBoxContainer"]
margin_top = 18.0
margin_right = 398.0
margin_bottom = 49.0
text = "- Atterrir sur le Wolrd Trade Center
- Ne pas dépasser les 200m avant d'être arrivé proche du WTC"

[node name="Helper" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -170.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Helper"]
margin_right = 272.0
margin_bottom = 150.0
alignment = 2

[node name="PitchUp" type="HBoxContainer" parent="CanvasLayer/UI/Helper/VBoxContainer"]
margin_top = 18.0
margin_right = 272.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchUp"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchUp"]
margin_left = 34.0
margin_right = 272.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Tirer le manche / Relever le nez"
valign = 1

[node name="PitchDown" type="HBoxContainer" parent="CanvasLayer/UI/Helper/VBoxContainer"]
margin_top = 52.0
margin_right = 272.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchDown"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Helper/VBoxContainer/PitchDown"]
margin_left = 34.0
margin_right = 272.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Pousser le manche / Baisser le nez"
valign = 1

[node name="RollRight" type="HBoxContainer" parent="CanvasLayer/UI/Helper/VBoxContainer"]
margin_top = 86.0
margin_right = 272.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Helper/VBoxContainer/RollRight"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Helper/VBoxContainer/RollRight"]
margin_left = 34.0
margin_right = 272.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Tourner à droite"
valign = 1

[node name="RollLeft" type="HBoxContainer" parent="CanvasLayer/UI/Helper/VBoxContainer"]
margin_top = 120.0
margin_right = 272.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Helper/VBoxContainer/RollLeft"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 10 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Helper/VBoxContainer/RollLeft"]
margin_left = 34.0
margin_right = 272.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Tourner à gauche"
valign = 1

[connection signal="crashed" from="Player" to="." method="_on_Player_crashed"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]

[editable path="Manhattan"]
[editable path="Manhattan/FarManhattan"]
[editable path="Manhattan/WTC"]
